--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Fe</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://www.shutterstock.com/image-vector/business-communications-corporation-icon-vector-600nw-1564118059.jpg">
 </head>
 <body>
   <app-root></app-root>
